--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "angular-animate": "^1.4.4",
     "angular-aria": "^1.4.4",
     "angular-material": "^0.10.1",
+    "angular-messages": "^1.4.4",
     "body-parser": "^1.13.3",
     "express": "^4.13.3",
     "grunt": "^0.4.5",
